# movieboomgo

./: .gitignore  BUILD  Makefile  MovieBOOMThrift.podspec  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go
apihttp/: BUILD.bazel  README.md  main.go
thrift/: BUILD.bazel  Makefile  client.go  main.go  movie.thrift  movie_handler.go  server.go
thrift/gen-go/movie/: BUILD.bazel  GoUnusedProtection__.go  movie-consts.go  movie.go
thrift/gen-go/movie/movie_service-remote/: BUILD.bazel  movie_service-remote.go
thrift/gen-swift/: movie+Exts.swift  movie.swift
tmdb/: BUILD.bazel  README.md  auth_create_request_token.go  authentication_create_request_token.go  movie_get_details.go
