load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "GET_movie.go",
        "client.go",
        "main.go",
        "movie_handler.go",
        "server.go",
    ],
    importpath = "github.com/muizidn/movieboomgo/thrift",
    visibility = ["//visibility:public"],
    deps = [
        "//thrift/gen-go/movie:go_default_library",
        "@com_github_apache_thrift//lib/go/thrift:go_default_library",
    ],
)

go_binary(
    name = "thrift",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
