load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "auth_create_request_token.go",
        "movie_get_details.go",
    ],
    importpath = "github.com/muizidn/movieboomgo/tmdb",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_zap//:go_default_library"],
)
