load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "GoUnusedProtection__.go",
        "movie.go",
        "movie-consts.go",
    ],
    importpath = "github.com/muizidn/movieboomgo/thrift/gen-go/movie",
    visibility = ["//visibility:public"],
    deps = ["@com_github_apache_thrift//lib/go/thrift:go_default_library"],
)
